--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
-/* body {
-    background-color: pink;
-} */
+body {
+    font-family: "Plus jakarta Sans", sans-serif !important;
+}
 
   
 
@@ -18,4 +18,80 @@
 
 .nav-link {
     color: #222222 !important;
+}
+
+
+/* Footer */
+
+.f-info-links a {
+    text-decoration: none;
+    color: #222222;
+}
+
+.f-info-links a:hover {
+    text-decoration: underline;
+    
+}
+
+.f-info-links,
+.f-info-brand,
+.f-info-socials{
+    width: 100%;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.f-info-socials i {
+    font-size: 2rem;
+    margin-right: 1rem;
+}
+
+ 
+.f-info {
+    text-align: center;
+    height: 8rem;
+    background-color: #ebebeb;
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: center;
+     align-items: space-evenly;
+
+}
+
+
+/* cards */
+
+
+.card {
+    border: none !important;
+    margin-bottom: 2rem;
+}
+
+.card-img-top {
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important;
+}
+
+.card-body {
+    padding: 0  !important;
+}
+
+.card-text p {
+    font-weight: 400 !important;
+}
+
+.listing-link{
+    text-decoration: none;
+}
+
+/* card Effect*/
+.card-img-overlay{
+    opacity: 0;
+}
+.card-img-overlay:hover{
+    opacity: 0.2;
+    background-color: white;
 }
