--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,14 +4,31 @@
     <!-- <form method="GET" action="/listings/new">
       <button>Create New Listing</button>
     </form> -->
-    <ul>
-      <% for (let listing of allListings) { %>
-        <li>
-          <a href="/listings/<%= listing._id %>">
-            <%= listing.title %>
-          </a>
-        </li>
-      <% } %>
-    </ul>
+        <div class="row row-cols-lg-4 row-cols-adjust">
+            <% for(let listing of allListings) { %>
+                <a href="/listings/<%= listing._id%>" class="listing-link" style="text-decoration: none;">
+                    <div class="card col listing-card" >
+                        <img src="<%= listing.image.url%>" class="card-img-top listing-index-img" alt="listing-img" style="height: 20rem">
+                        <div class="card-img-overlay"></div>
+                        <div class="listing-card-body">
+                            <p class="listing-card-text">
+                                <b>
+                                    <%= listing.title%>
+                                </b> <br>
+                                &#8377; <%= listing.price.toLocaleString("en-In") %> / night
+                                    <i class="tax-info">&nbsp; &nbsp; + 18% GST</i>
+                            </p>
+                        </div>
+                    </div>
+                </a>
+                <% } %>
   </body>
+
+
+
+
+
+
+
+
 
