Updated styles and improved listings edit/new templates

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,12 @@
 body {
     font-family: "Plus jakarta Sans", sans-serif !important;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
-
+.container {
+    flex: 1;
+}
   
 
 /* Navbar  */
@@ -87,6 +92,8 @@ body {
     text-decoration: none;
 }
 
+
+
 /* card Effect*/
 .card-img-overlay{
     opacity: 0;
@@ -94,4 +101,21 @@ body {
 .card-img-overlay:hover{
     opacity: 0.2;
     background-color: white;
+}
+
+
+
+/* New-Page */
+
+.add-btn {
+    background-color: #fe424d !important;
+    border: none !important;
+}
+
+
+/* Edit-page */
+
+.edit-btn {
+    background-color: #fe424d !important;
+    border: none !important;
 }
