--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,17 +1,52 @@
 <% layout("/layouts/boilerplate") %>
-<body>
+    <div class="row mt-3">
+      <div class="col-8 offset-3" >
     <h3>Listing Details :</h3>
-    <ul>
-      <li><%= listing.title  %></li>
-      <li><%= listing.description %></li>
-     <li>&#8377;<%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %></li>
-      <li><%= listing.location %></li>
-      <li><%= listing.country %></li>
-    </ul>
+    </div>
+    <div class="card col-6 offset-3  show-card">
+      <img src="<%= listing.image.url%>>" 
+      class="card-img-top show-img"
+       alt="listing_image"
+       />
+
+      <div class="card-body">
+        <p class="card-text">
+
+        <li><%= listing.title  %></li>  
+        
+        </p>
+        <p class="listing-card-text">
+           <b>Description: </b>
+           <%=listing.description%>
+         </p>
+         <p class="listing-card-text">
+           <b>Cost: </b>
+            &#8377;
+            <%=listing.price.toLocaleString("en-In")%>
+          </p>
+          <p class="listing-card-text">
+            <b>Category:</b>
+            <%= listing.category %>
+            </p>
+          <p class="listing-card-text"><b>Location:&nbsp;&nbsp;</b><i
+             class="fa-solid fa-location-dot">&nbsp;</i>
+             <%= listing.location %>
+          </p>
+            <p class="listing-card-text"><b>Country:&nbsp;&nbsp;</b><i class="fa-solid fa-globe">&nbsp;</i>
+             <%= listing.country %>
+         </p> 
+      </div>
+    </div>
+
     <br/>
-    <a href="/listings/<%= listing._id %>/edit"> Edit this Listing</a>
-    <br><br>
+
+    <div class="btns">
+     <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn"> Edit </a>
+    
     <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-      <button>Delete this Listing</button>
+      <button class="btn btn-dark offset-5">Delete</button>
     </form>
-</body>
+    </div>
+
+     
+</div>
