Add schema validation and update related files

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -21,11 +21,11 @@
                         </div>
                         <div class="mb-3">
                             <label for="image" class="form-label">Upload Listing Image</label>
-                            <input type="file" name="listing[image]" id="image" class="form-control" required>
+                            <input type="file" name="listing[image]" id="image" class="form-control" >
                             
                             <div class="invalid-feedback">Please select image to upload</div>
                         </div>
-                        <div>
+                        <!-- <div>
                             <label for="category" class="form-label">Choose Category</label>
                             <div class="category-choose"></div>
                             <div class="row">
@@ -176,8 +176,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="invalid-feedback">Choose Category</div>
-                        </div>
+                            <div class="invalid-feedback">Choose Category</div> 
+                        </div> -->
 
                         <div class="mb-3">
                             <label for="price" class="form-label">Price</label>
