--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
     <div class="row mt-3">
       <div class="col-8 offset-3" >
-    <h3>Listing Details :</h3>
+    <h3><%= listing.title  %></h3>
     </div>
     <div class="card col-6 offset-3  show-card">
       <img src="<%= listing.image.url%>>" 
@@ -12,8 +12,6 @@
       <div class="card-body">
         <p class="card-text">
 
-        <li><%= listing.title  %></li>  
-        
         </p>
         <p class="listing-card-text">
            <b>Description: </b>
