--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -46,5 +46,33 @@
     </form>
     </div>
 
+    <div class="listing-details">
+  <h1><%= listing.title %></h1>
+  <p><%= listing.description %></p>
+  <p>Price: $<%= listing.price %></p>
+
+  <!-- Reviews Section -->
+  
+ <div class="col-8 offset-3 mb-3">
+   <hr>
+  <h4>Leave A Review</h4>
+  <form>
+    <div class="mb-3 mt-3">
+      <label for="rating" class="form-label">Rating</label>
+      <input type="range" min="1" max="5" id="rating" name="review[ratin]" class="form-range">
+    </div>
+    <div  class="mb-3 mt-3">
+      <label for="comment"class="form-label">comment</label>
+      <textarea
+       name="review[comment]"
+       id="comment" 
+       cols="30"
+        rows="5"
+        class="form-control"
+     ></textarea>
+    </div>
+    <button class="btn btn-outline-dark">Submit></button>
+  </form>
+ </div>
      
 </div>
