add reviews in our frontend that shows user reviews

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -69,6 +69,16 @@
 
     <button type="submit" class="btn btn-outline-dark">Submit</button>
   </form>
+
+  <hr/>
+
+  <h4>All REviews</h4>
+
+  <ul>
+    <% for(review of listing.reviews){ %>
+      <li><%= review.comment %>, <%= review.rating %> stars</li>
+      <% } %>
+  </ul>
 </div>
 
      
