--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,7 +3,7 @@
       <div class="col-8 offset-3" >
     <h3><%= listing.title  %></h3>
     </div>
-    <div class="card col-6 offset-3  show-card">
+    <div class="card col-6 offset-3  show-card listing-card">
       <img src="<%= listing.image.url%>>" 
       class="card-img-top show-img"
        alt="listing_image"
@@ -72,13 +72,18 @@
 
   <hr/>
 
-  <h4>All REviews</h4>
-
-  <ul>
-    <% for(review of listing.reviews){ %>
-      <li><%= review.comment %>, <%= review.rating %> stars</li>
+  <p><b></b>All REviews</b></p>
+    <div class="row">
+  <% for(review of listing.reviews) { %>
+    <div class="card col-5 ms-3 mb-3">
+      <div class="card-body">
+        <h5 class="card-title">divya</h5>
+        <p class="card-text"><%= review.comment %></p>
+        <P class="card-text"><%= review.rating %> stars</P>
+      </div>
+    </div>
       <% } %>
-  </ul>
+    </div>
 </div>
 
      
