--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -72,7 +72,7 @@
 
   <hr/>
 
-  <p><b></b>All REviews</b></p>
+  <!-- <p><b></b>All REviews</b></p>
     <div class="row">
   <% for(review of listing.reviews) { %>
     <div class="card col-5 ms-3 mb-3">
@@ -90,7 +90,49 @@
     </div>
       <% } %>
     </div>
+</div> -->
+
+
+
+
+
+
+<p><b>All Reviews</b></p>
+
+<div class="row">
+  <% for (let review of listing.reviews) { %>
+    <div class="card col-5 ms-3 mb-3">
+      <div class="card-body">
+
+        <h5 class="card-title">User</h5>
+
+        <!-- ⭐ STAR DISPLAY -->
+        <p class="mb-1">
+          <% for (let i = 1; i <= 5; i++) { %>
+            <% if (i <= review.rating) { %>
+              <span style="color:#f5b301">★</span>
+            <% } else { %>
+              <span style="color:#ccc">★</span>
+            <% } %>
+          <% } %>
+        </p>
+
+        <p class="card-text">
+          <%= review.comment %>
+        </p>
+
+        <form 
+          method="POST"
+          action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+        >
+          <button class="btn btn-sm btn-dark">Delete</button>
+        </form>
+
+      </div>
+    </div>
+  <% } %>
 </div>
+
 
      
 </div>
