--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,5 +1,5 @@
-<% layout("/layouts/boilerplate") %>
-  <body>
+<% layout("/layouts/boilerplate") %>  <%= success %>
+ <body>
     <h3>All Listings</h3>
     <!-- <form method="GET" action="/listings/new">
       <button>Create New Listing</button>
@@ -22,7 +22,7 @@
                     </div>
                 </a>
                 <% } %>
-  </body>
+ </body>
 
 
 
