signup user-POST route create to store user

--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -32,8 +32,8 @@
             <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input
-             name="Password" 
-             id="Password" 
+             name="password" 
+             id="password" 
              type="password"
              class="form-control" 
              required
