--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,16 +4,16 @@
     <h3><%= listing.title  %></h3>
     </div>
     <div class="card col-6 offset-3  show-card listing-card">
-      <img src="<%= listing.image.url%>>" 
+      <img src="<%= listing.image%>>" 
       class="card-img-top show-img"
        alt="listing_image"
        />
 
       <div class="card-body">
-        <p class="card-text">
-
-        </p>
-        <p class="listing-card-text">
+        <p class="card-text listing-card-text">
+          <b>Posted by:</b>
+          <i><%= listing.owner.username %></i> </p>
+          <p>
            <b>Description: </b>
            <%=listing.description%>
          </p>
@@ -106,7 +106,7 @@
 
         <h5 class="card-title">User</h5>
 
-        <!-- ⭐ STAR DISPLAY -->
+        <!-- STAR DISPLAY -->
         <p class="mb-1">
           <% for (let i = 1; i <= 5; i++) { %>
             <% if (i <= review.rating) { %>
