--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,7 +4,7 @@
     <h3><%= listing.title  %></h3>
     </div>
     <div class="card col-6 offset-3  show-card listing-card">
-      <img src="<%= listing.image%>>" 
+      <img src="<%= listing.image.url%>>" 
       class="card-img-top show-img"
        alt="listing_image"
        />
@@ -37,14 +37,19 @@
     </div>
 
     <br/>
-
+    
+    <%  if (currUser && currUser._id.equals(listing.owner._id)) {%>
     <div class="btns">
-     <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn"> Edit </a>
+     <a 
+     href="/listings/<%= listing._id %>/edit" 
+     class="btn btn-dark col-1 offset-3 edit-btn"> Edit </a>
     
     <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
       <button class="btn btn-dark offset-5">Delete</button>
     </form>
     </div>
+
+    <% } %>
 
     <!-- <div class="listing-details">
   <h1><%= listing.title %></h1>
