--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -51,25 +51,72 @@
 
     <% } %>
 
-    <!-- <div class="listing-details">
-  <h1><%= listing.title %></h1>
-  <p><%= listing.description %></p>
-  <p>Price: $<%= listing.price %></p> -->
-
   <!-- Reviews Section -->
 
 
-
- <div class="col-8 offset-3 mb-3">
+<div class="col-8 offset-3 mb-3">
   <hr>
    <% if (currUser) { %>
   <h4>Leave A Review</h4>
-  <form action="/listings/<%= listing.id %>/reviews" method="POST">
-    <div class="mb-3 mt-3">
-      <label for="rating" class="form-label">Rating</label>
-      <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range" />
-    </div>
+  <form 
+  action="/listings/<%= listing.id %>/reviews" 
+  method="POST"
+  novalidate
+  class="needs-validation"
+  >
+     <div class="mb-3 mt-3">
+        <label for="rating" class="form-label">Rating</label>
+   
+  <fieldset class="starability-slot">
+  <input 
+  type="radio" 
+  id="no-rate" 
+   class="input-no-rate"
+   name="review[rating]" 
+   value="1" 
+   checked aria-label="No rating." />
+  <input  
+  type="radio" 
+  id="first-rate1" 
+  name="review[rating]"
+   value="1"
+    />
+  
+  
+   <label for="first-rate1" title="Terrible">1 star</label>
+  <input
+   type="radio"
+    id="first-rate2" 
+    name="review[rating]"
+     value="2"
+      />
 
+  <label for="first-rate2" title="Not good">2 stars</label>
+  <input 
+  type="radio"
+   id="first-rate3"
+    name="review[rating]" 
+    value="3" 
+    />
+
+  <label for="first-rate3" title="Average">3 stars</label>
+  <input
+   type="radio"
+    id="first-rate4"
+     name="review[rating]"
+      value="4" 
+      />
+
+  <label for="first-rate4" title="Very good">4 stars</label>
+  <input 
+  type="radio" 
+  id="first-rate5" 
+  name="review[rating]" 
+  value="5"
+   />
+  <label for="first-rate5" title="Amazing">5 stars</label>
+</fieldset>
+</div>
     <div class="mb-3 mt-3">
       <label for="comment" class="form-label">Comment</label>
       <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"></textarea>
@@ -79,33 +126,7 @@
   </form>
 
   <hr/>
-
-
-  <% } %>
-
-  <!-- <p><b></b>All REviews</b></p>
-    <div class="row">
-  <% for(review of listing.reviews) { %>
-    <div class="card col-5 ms-3 mb-3">
-      <div class="card-body">
-        <h5 class="card-title">divya</h5>
-        <p class="card-text"><%= review.comment %></p>
-        <P class="card-text"><%= review.rating %> stars</P>
-        <form 
-           class="mb-3"
-           method="POST"
-           action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
-           <button class="btn btn-sm btn-dark">Delete</button>
-         </form>
-      </div>
-    </div>
-      <% } %>
-    </div>
-</div> -->
-
-
-
-
+  <% } %> 
 
 
 <p><b>All Reviews</b></p>
@@ -116,23 +137,14 @@
       <div class="card-body">
 
         <h5 class="card-title">@<%= review.author.username %></h5>
-
-        <!-- STAR DISPLAY -->
-        <p class="mb-1">
-          <% for (let i = 1; i <= 5; i++) { %>
-            <% if (i <= review.rating) { %>
-              <span style="color:#f5b301">★</span>
-            <% } else { %>
-              <span style="color:#ccc">★</span>
-            <% } %>
-          <% } %>
+        
+        <p class="starability-result card-text"
+         data-rating="<%= review.rating %>">
         </p>
 
-        <p class="card-text">
-          <%= review.comment %>
-        </p>
-
+        <p class="card-text"><%= review.comment %></p>
         <form 
+        class="mb-3"
           method="POST"
           action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
         >
@@ -146,4 +158,4 @@
 
 
      
-</div>
+</div> 
