manipulating form and then store the data local in /upload folder using multer parasing data

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,7 +4,10 @@
         <div class="container mt-3">
             <div class="row justify-content-center">
                 <div class="new-edit-form-inp">
-                    <form action="/listings" method="post" novalidate class="needs-validation">
+                    <form action="/listings" 
+                    method="post" 
+                    novalidate class="needs-validation" 
+                    enctype="multipart/form-data">
                         <h3>Create a New Listing</h3>
                         <div class="mb-3">
                             <label for="title" class="form-label">Title</label>
