edit listing image section

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -24,7 +24,7 @@
 
                         <div class="mb-3">
                             <label for="image" class="form-label">Upload Listing Image</label>
-                            <input type="file" name="listing[image]" id="image" class="form-control" >
+                            <input type="file" name="listing[image]" id="image" class="form-control" required>
                             
                             <div class="invalid-feedback">Please select image to upload</div>
                         </div>
