--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -29,7 +29,7 @@
                             <label for="image" class="form-label"> Upload New Image</label>
                             <input name="listing[image]" type="file" class="form-control" id="image" />
                         </div>
-                        <div>
+                        <!-- <div>
                             <label for="category" class="form-label">Choose Category</label>
                             <div class="category-choose">
                             </div>
@@ -197,7 +197,7 @@
                                 </div>
                             </div>
                             <div class="invalid-feedback">Choose Category</div>
-                        </div>
+                        </div> -->
 
                         <div class="row">
                             <div class="mb-3 col-md-4">
