--- a/public/css/style.css
+++ b/public/css/style.css
@@ -168,3 +168,11 @@ body {
 .star-rating label:hover ~ label {
   color: #f5b301;
 }
+
+/* Mapbox CSS */
+map{
+    width: 100%;
+    height: 400px;
+    border-radius: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;}
