--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,6 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <link href="/css/rating.css" rel="stylesheet"/>
+
+    <link href="https://api.mapbox.com/mapbox-gl-js/v3.18.1/mapbox-gl.css"
+    rel="stylesheet">
+
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.18.1/mapbox-gl.js"></script>
+
+
 </head>
 <body>
     <%- include("../includes/navbar.ejs") %>
