--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,9 @@
 <% layout("/layouts/boilerplate") %>
+
+ <script>
+  const mapToken = '<%= process.env.MAP_TOKEN %>';
+ </script>
+
     <div class="row mt-3">
       <div class="col-8 offset-3" >
     <h3><%= listing.title  %></h3>
@@ -55,8 +60,9 @@
 
 
 <div class="col-8 offset-3 mb-3">
-  <hr>
+ 
    <% if (currUser) { %>
+  <hr>
   <h4>Leave A Review</h4>
   <form 
   action="/listings/<%= listing.id %>/reviews" 
@@ -129,9 +135,10 @@
   <% } %> 
 
 
-<p><b>All Reviews</b></p>
 
+<% if (listing.reviews.length > 0) { %>
 <div class="row">
+  <p><b>All Reviews</b></p>
   <% for (let review of listing.reviews) { %>
     <div class="card col-5 ms-3 mb-3">
       <div class="card-body">
@@ -154,8 +161,15 @@
       </div>
     </div>
   <% } %>
-</div>
+    </div>
+<% } %>
 
+  </div>
+     <div class="col-8  offset-3  mb-3">
+   <h3>where you'll be</h3>
+   <div id="map"></div>    
 
-     
-</div> 
+  </div>
+  
+  
+ <script src="/js/map.js"></script>  
