Add UI for filter

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,4 +175,17 @@ map{
     height: 400px;
     border-radius: 1rem;
     margin-top: 1rem;
-    margin-bottom: 2rem;}
+    margin-bottom: 2rem;
+}
+
+/* nav icons style*/
+
+
+
+
+
+
+
+
+
+
