--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,9 +1,176 @@
-<% layout("/layouts/boilerplate") %> 
- <body>
-    <h3>All Listings</h3>
-    <!-- <form method="GET" action="/listings/new">
-      <button>Create New Listing</button>
-    </form> -->
+<% layout("/layouts/boilerplate") %>
+
+    <body>
+        <div id="filter-wrapper">
+            <button class="scroll-btn left-btn"><i class="fa-solid fa-less-than"></i></button>
+            <div id="filters-container">
+
+
+
+
+            <style>
+                #filters {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.filter{
+    text-align: center;
+    margin-right: 2rem;
+    margin-right: 1rem;
+    opacity: 0.7;
+}
+
+.filter:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+.filter p{
+    font-size: 0.8 rem;
+}
+
+            </style>    
+                <div id="filters">
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Rooms"> -->
+                            <div><i class="fa-solid fa-bed"></i></div>
+                            <p>Rooms</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Iconic-Cities"> -->
+                            <div><i class="fa-solid fa-mountain-city"></i></div>
+                            <p>Iconic Cities</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Trending"> -->
+                            <div><i class="fa-solid fa-fire"></i></div>
+                            <p>Trending</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Mountains"> -->
+                            <div><i class="fa-solid fa-mountain-sun"></i></div>
+                            <p>Mountains</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Castles"> -->
+                            <div><i class="fa-brands fa-fort-awesome"></i></div>
+                            <p>Castles</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Amazing-Pools"> -->
+                            <div><i class="fa-solid fa-person-swimming"></i></div>
+                            <p>Amazing Pools</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Camping"> -->
+                            <div><i class="fa-solid fa-campground"></i></div>
+                            <p>Camping</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Farm"> -->
+                            <div><i class="fa-solid fa-cow"></i></div>
+                            <p>Farm</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Arctic"> -->
+                            <div><i class="fa-solid fa-snowflake"></i></div>
+                            <p>Arctic</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Beach"> -->
+                            <div><i class="fa-solid fa-umbrella-beach"></i></div>
+                            <p>Beach</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Boat"> -->
+                            <div><i class="fa-solid fa-sailboat"></i></div>
+                            <p>Boat</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Ski-in-out"> -->
+                            <div><i class="fa-solid fa-person-snowboarding"></i></div>
+                            <p>Ski-in/out</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Apartment"> -->
+                            <div><i class="fa-solid fa-building"></i></div>
+                            <p>Apartment</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/New"> -->
+                            <div><i class="fa-solid fa-key"></i></div>
+                            <p>New</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Woodlands"> -->
+                            <div><i class="fa-solid fa-tree-city"></i></div>
+                            <p>Woodlands</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Lake"> -->
+                            <div><i class="fa-solid fa-water"></i></div>
+                            <p>Lake</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Cabins"> -->
+                            <div><i class="fa-solid fa-house"></i></div>
+                            <p>Cabins</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Countryside"> -->
+                            <div><i class="fa-solid fa-house-chimney-window"></i></div>
+                            <p>Countryside</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Bed-and-Breakfasts"> -->
+                            <div><i class="fa-solid fa-mug-hot"></i></div>
+                            <p>Bed & Breakfasts</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Campsite"> -->
+                            <div><i class="fa-solid fa-tents"></i></div>
+                            <p>Campsite</p>
+                        </a>
+                    </div>
+                    <div class="filter">
+                        <!-- <a href="/listings/filter/Historical-Homes"> -->
+                            <div><i class="fa-solid fa-landmark"></i></div>
+                            <p>Historical Homes</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <button class="scroll-btn right-btn"><i class="fa-solid fa-greater-than"></i></button>
+            <div class="tax-toggle">
+                <div class="toggle-container">
+                    <div class="form-check-reverse form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="row row-cols-lg-4 row-cols-adjust">
             <% for(let listing of allListings) { %>
                 <a href="/listings/<%= listing._id%>" class="listing-link" style="text-decoration: none;">
