--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -12,10 +12,22 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-      
         <a class="nav-link" href="/listings">Explore</a>
-       
       </div>
+      
+      <div class="navbar-nav ms-auto">
+      <form class="search-form d-flex" role="search">
+      <input 
+      class="form-control search-inp" 
+      type="search" 
+      placeholder="Search destinations"
+      />
+      <button class="btn btn-search" type="submit">
+      Search
+      </button>
+      </form>
+
+    </div>
 
             <div class="navbar-nav ms-auto" >
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
