--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,12 +1,22 @@
 <% layout("/layouts/boilerplate") %>
 
     <body>
-        <div id="filter-wrapper">
-            <button class="scroll-btn left-btn"><i class="fa-solid fa-less-than"></i></button>
-            <div id="filters-container">
-  
-                <div id="filters">
-                    <div class="filter">
+
+
+    <div id="filter-bar">
+
+  <div id="filter-wrapper">
+    <button class="scroll-btn left-btn">
+      <i class="fa-solid fa-chevron-left"></i>
+    </button>
+
+    <div id="filters-container">
+      <div id="filters">
+        <!-- all filter icons -->
+
+
+
+ <div class="filter">
                         <!-- <a href="/listings/filter/Rooms"> -->
                             <div><i class="fa-solid fa-bed"></i></div>
                             <p>Rooms</p>
@@ -132,26 +142,27 @@
                             <p>Historical Homes</p>
                         </a>
                     </div>
-                </div>
-            </div>
-            <button class="scroll-btn right-btn"><i class="fa-solid fa-greater-than"></i></button>
-            <div class="tax-toggle">
-                <div class="toggle-container">
-                    <div class="form-check-reverse form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                        <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
+    </div>
 
-        
+    <button class="scroll-btn right-btn">
+      <i class="fa-solid fa-chevron-right"></i>
+    </button>
+  </div>
 
+  <div class="tax-toggle">
+    <div class="toggle-container">
+      <div class="form-check-reverse form-switch">
+        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+        <label class="form-check-label" for="flexSwitchCheckDefault">
+          Display total after taxes
+        </label>
+      </div>
+    </div>
+  </div>
 
-
-
-
-
+</div>
+    <br>
 
         <div class="row row-cols-lg-4 row-cols-adjust">
             <% for(let listing of allListings) { %>
