--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,19 +1,53 @@
-<footer>
-    <div class="f-info">
-        <div class="f-info-socials">
-            <i class="fa-brands fa-facebook" style="color: rgb(16, 108, 221)"></i>
-            <i class="fa-brands fa-square-instagram" style="color: rgb(232, 20, 20)"></i>
+<footer class="site-footer">
+  <div class="footer-container">
 
-            <i class="fa-brands fa-twitter" style="color: rgb(38, 195, 253)"></i>
-            <i class="fa-brands fa-pinterest" style="color: brown"></i>
-            <i class="fa-brands fa-linkedin" style="color: rgb(6, 101, 123)"></i>
+    <div class="footer-top">
+      <!-- Contact -->
+      <div class="footer-block">
+        <h4>Contact</h4>
+        <div class="footer-item">
+          <i class="fa-solid fa-envelope"></i>
+          <a href="mailto:ankushchoudhary2019@gmail.com">
+            ankushchoudhary2019@gmail.com
+          </a>
         </div>
-        <div class="f-info-brand">&copy; WonderLust Private Limited</div>
-        <div class="f-info-links">
-            <a href="">Privacy</a>&nbsp;&nbsp;
-            <a href="">Terms</a>&nbsp;&nbsp
-            <a href="">Sitemap</a>&nbsp;&nbsp
-            <a href="">Company details</a>&nbsp;&nbsp
+        <div class="footer-item">
+          <i class="fa-solid fa-phone"></i>
+          <a href="tel:+917999182859">+91 79991 82859</a>
         </div>
+        <div class="footer-item">
+          <i class="fa-solid fa-location-dot"></i>
+          <span>Burhanpur, India</span>
+        </div>
+      </div>
+
+      <!-- Social -->
+      <div class="footer-block">
+        <h4>Follow Me</h4>
+        <div class="footer-social">
+          <a href="https://github.com/mrankush079" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://linkedin.com/in/mrankush079" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://www.instagram.com/mr_ankush_079/" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+      </div>
     </div>
+
+    <div class="footer-bottom">
+      <p>© 2026 CodeAnkush. All rights reserved.</p>
+      <p>© WonderLust Private Limited</p>
+      <div class="footer-links">
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="#">Sitemap</a>
+        <a href="#">Company details</a>
+      </div>
+    </div>
+
+  </div>
 </footer>
